# voxpilot

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  COPILOT_TOOL_PLAN.md  Justfile  MIGRATION_PLAN.md  README.md  REVIEW_IMPL_PLAN.md  REVIEW_UX_SPEC.md  ROADMAP.md
backend/: biome.json  drizzle.config.ts  package.json  pyproject.toml  tsconfig.json
backend/drizzle/: 0000_panoramic_magus.sql  0001_funny_hawkeye.sql
backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
backend/scripts/: export_openapi.py
backend/src/: config.ts  db.ts  index.ts  schema.ts
backend/src/middleware/: auth.ts
backend/src/routes/: artifacts.ts  auth.ts  chat.ts  health.ts  sessions.ts
backend/src/schemas/: api.ts  diff-document.ts  events.ts
backend/src/services/: agent.ts  artifact-pipeline.ts  artifacts.ts  copilot-acp.ts  diff-fulltext.ts  diff-parser.ts  diff-render.ts  github.ts  markdown.ts  sessions.ts  streams.ts
backend/src/tools/: base.ts  copilot-agent.ts  git-diff.ts  git-show.ts  git-utils.ts  glob-search.ts  grep-search.ts  index.ts  list-directory.ts  read-file-external.ts  read-file.ts  registry.ts
backend/src/voxpilot/: __init__.py  config.py  db.py  dependencies.py  main.py
backend/src/voxpilot/api/: __init__.py
backend/src/voxpilot/api/routes/: auth.py  chat.py  health.py
backend/src/voxpilot/models/: schemas.py
backend/src/voxpilot/services/: agent.py  github.py  sessions.py  streams.py
backend/src/voxpilot/services/tools/: __init__.py  base.py  list_directory.py  read_file.py  read_file_external.py  registry.py
backend/tests/: __init__.py  agent.test.ts  artifacts.test.ts  auth.test.ts  chat.test.ts  conftest.py  diff-parser.test.ts  diff-render.test.ts  health.test.ts  helpers.ts  sessions.test.ts  streams.test.ts  test_chat.py  test_confirmation.py  test_tools.py  tools.test.ts
docs/: copilot-acp-persistence-findings.md
frontend/: build.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+54 files in other folders)
